--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tanstack/vue-query": "^4.29.5",
     "core-js": "^3.8.3",
+    "vee-validate": "^3.4.15",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
